# wb-rest-orders

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  order.rs  routes.rs  state.rs
src/resources/: log_cfg.yaml
src/resources/db/: schema.sql
src/resources/logging/: log_cfg.yaml
stress/: stress_test.py
