[package]
name = "wb-rest-order"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
hyper = { version = "0.14", features = ["full"] }
axum-server = "0.7.1"
log = "0.4"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4","serde"] }
log4rs = {version = "1.3.0" }
rand = "0.8"
serde_yaml = "0.9"
thiserror = "1.0"
postgres-types = "0.2.7"
postgres = "0.19.8"
bytes = "1.7.1"
tokio-postgres = { version = "0.7.11"}